Fri Jan 31 05:30:40 1997  Scott Christley <scottc@net-community.com>

	* Move and install resources to a more appropriate place.
	* gnustep/gui/resource: Remove directory and files.
	* Images: New directory.
	* Images/GNUstep_Images_Copyright: New file.
	* Images/Makefile.in: New file.
	
	* Makefile.in: Clean up code.
	* configure.in: Update ftp messages; add Images directory.
	* configure: Regenerate based upon configure.in changes.
	* Headers/gnustep/gui/NSCell.h (support): Remove instance variable.
	(cell_image, cell_font): New instance variables.
	* Source/Makefile.in (GNUSTEP_RESOURCE, install-resource): Remove.
	(GNUSTEP_INSTALL_LIBDIR): Add definition.
	Correct some minor errors.
	* Source/NSButtonCell.m: Modify for NSCell instance variables changes.
	* Source/NSCell.m: Likewise.
	* Source/NSTextFieldCell.m: Likewise.
	* Headers/gnustep/gui/NSBitmapImageRep.h (back_end_reserved):
	New instance variable for backend use.
	* Source/NSImage.m (NSImage_PATH): Default path for where NSImage
	tries to find system image resources.
	(-_displayEraseRect:view:color:): Eliminate method.
	(-_doImageCache): Remove drawing code and place in proper methods.

Thu Jan 30 12:34:30 1997  Scott Christley <scottc@net-community.com>

	* Headers/gnustep/gui/NSDragging.h (NSDraggingInfo): Define
	protocol before it is used by the NSObject category.
	* Headers/gnustep/dps/DPSOperators.h: Eliminate unneeded code.
	* Source/NSControl.m (-copyWithZone:): New method.
	* Source/NSFontManager.m (-fontWithFamily:traits:weight:size:):
	Add log error message when requesting invalid font.

Thu Jan 29 13:07:11 1997  Adam Fedor  <fedor@boulder.Colorado.edu>

	* Headers/gnustep/gui/AppKit.h: Add NSBundle definitions.

	* Source/NSBitmapImageRep.m ([NSBitmapImageRep -bitmapData]):
	planes instance variable always contains image data.
	([NSBitmapImageRep -getBitmapDataPlanes]): Check for data in
	imagePlanes before allocating data.