@@ -32,6 +32,7 @@
 #include <AppKit/stdappkit.h>
 #include <AppKit/NSControl.h>
 #include <Foundation/NSCoder.h>
+#include <AppKit/NSColor.h>
 
 @interface NSColorWell : NSControl <NSCoding>
 
@@ -40,6 +41,9 @@
   NSColor *the_color;
   BOOL is_active;
   BOOL is_bordered;
+
+  // Reserved for back-end use
+  void *be_cwell_reserved;
 }
 
 //
@@ -72,6 +76,15 @@
 //
 - (void)encodeWithCoder:aCoder;
 - initWithCoder:aDecoder;
+
+@end
+
+//
+// GNUstep backend methods
+//
+@interface NSColorWell (GNUstepBackend)
+
+- (void)drawBorderRect:(NSRect)aRect;
 
 @end
 
